syntax = "proto3";

package go.micro.service.post_svc;

service Category {
    rpc CreateCategory (CreateCategoryRequest) returns (CreateCategoryResponse) {
    }
    rpc GetAllCategory (GetAllCategoryRequest) returns (GetAllCategoryResponse) {
    }
}

message CreateCategoryRequest {
    int64 mengerId = 1;
    string name = 2;
    string showName = 3;
}

message CreateCategoryResponse {
    string errorMsg = 999;
}

message GetAllCategoryRequest {
}

message CategoryInfo {
    int64 id = 1;
    int64 mengerId = 2;
    string name = 3;
    string showName = 4;
}

message GetAllCategoryResponse {
    repeated CategoryInfo categoryInfos = 1;
    string errorMsg = 999;
}





